--- a/TinDog-Start-master/index.html
+++ b/TinDog-Start-master/index.html
@@ -21,7 +21,7 @@
 
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark ">
-        <a class="navbar-brand" href="">TinDog</a>
+        <a class="navbar-brand" href="#">TinDog</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 
           <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
           <ul class="navbar-nav ml-auto">
 
             <li class="nav-item">
-              <a class="nav-link" href="">
+              <a class="nav-link" href="#">
                 Contact
               </a>
 
